# BEGIN--RING-v2.1.io

./: Cargo.toml  README.md  SURGICAL_DISSECTION.md  SecureKyberSession.rs  build.gradle.kts  debug_report.md  dilithium_auth.rs
App/: Final_Validation.md  Validation.md  bash  dashboard1.html  markdown.md  markdown_fiel.md  package-lock.json  package.json
App/backend/: server.js
App/backend/middleware/: rateLimit.js  security.js
App/backend/routes/: auth.js  logs.js  metrics.js
App/backend/routes/tests/: integration.test.js
App/backend/utils/: abac.js  behavioral.js  pqc.js  sss.js
App/bash1/: bash  run-bash
App/frontend/css/: styles.css  supabase.css
App/frontend/css/js/: app.js
App/pages/: Synapse-Engine.js  index.html  supabase-css.css  supabase.html
App/tests/: security.test.js
QUANTUMIX-DASHBOARD/: README.md  app.js  index.html  style.css
api/: MatrixApplication.kt  app.js  run-bash
dragon-os/: Cargo.toml  DELIVERY_MANIFEST.md  FILE_TREE.txt  Makefile  QUICKSTART.md  README.md  START_HERE.md  x86_64-dragon-os.json
dragon-os/kernel/: Cargo.toml
dragon-os/kernel/src/: djed_clock.rs  gdt.rs  idt.rs  ipc.rs  logger.rs  main.rs  scheduler.rs  types.rs
dragon-os/user/lib/: Cargo.toml
dragon-os/user/lib/src/: lib.rs
dragon-os/user/ritual/: Cargo.toml
dragon-os/user/ritual/src/: main.rs
dragon-tools/: Cargo.toml  README.md
dragon-tools/benches/: chaos_boundary.rs  djed_clock.rs  protocol_stack.rs
dragon-tools/src/: djed_clock.rs  error.rs  lib.rs  main.rs  protocol.rs  types.rs
dragon-tools/src/cache/: atomic_writer.rs  mod.rs
dragon-tools/tests/: integration.rs
firewall_agent/: Makefile  bpf_firewall.c
kotlin/: AdvancedCertificatePinner.kt  AdvancedMobileSecurityPatterns.kt  CryptoService.kt  DefenseInDepthSecurity.kt  Dilithumkeypair.kt  Dockerfile  QuantumResistantKyber.kt  RASPEngine.kt  SecureCommunicationFramework.kt  SecureKeyVault.kt  SecureWebSocketClient.kt  ⚙️ Models.kt  🧠 DashboardViewModel.kt
kotlin/API/: API-Manger.kt
kotlin/app/: SecureWebSocketClient.kt  ShamirSecretSharing.kt
modules/: firewall-v2.txt
res/: galois_field.rs
res/xml/: network_security_config.xml
scarab/dragon_v2/: akashic_cache.py  dragon_system.py  exceptions.py  types.py
scripts/: VALIDATION REPORT  bash  npm-test  set-ens-tor-list.sh  setup.js
src/main/: markdown.md
src/main/java/com/phiring/core/: SssCore.kt
src/main/java/com/phiring/core/cpp/: CMakeLists.txt  MARKDOWN.md  run-bash  sss_core_native.cpp
src/main/java/com/yourpackage/security/: SecureMobileClient.kt
src/main/kotlin/com/example/: ShamirSecretSharing.kt
src/main/kotlin/com/phiring/dashboard/config/: AppConfig.kt  bash
src/main/resources/: application.yaml
tests/: test_consciousness_veto.py
