[package]
name = "dragon-tools"
version = "2.0.0"
edition = "2021"

[dependencies]
blake3 = "1.5"
io-uring = "0.7"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
memmap2 = "0.9" # Useful for memory mapped I/O if needed, or buffer management

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
rand = "0.8"

[[bench]]
name = "djed_clock"
harness = false

[[bench]]
name = "protocol_stack"
harness = false

[[bench]]
name = "chaos_boundary"
harness = false
