[package]
name = "dragon-kernel"
version = "2.0.0"
edition = "2021"

[dependencies]
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.14.10"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
log = "0.4"
pc-keyboard = "0.7.0"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300
